--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,25 +1,33 @@
-:root{
-    --primary-color: #c77d4b;
-    --dark-grey: #121212;
-    --white: #fff;
-    --white-transparent: #fff5;
-}
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;1,700&display=swap');
+
 .navBar{
     position: relative;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: var(--primary-color);
+    background-color: var(--light-gray);
     width: 100%;
-    padding: 0 2rem;
+    padding: 0 15rem;
     height: 50px;
+    font-family: 'Montserrat', sans-serif;
 }
 
-.navBar__logo{
-    font-size: 1.3rem;
-    font-weight: 400;
-    color: var(--white);
-    font-family: 'Poppins', sans-serif;
+.navBar__menu{
+    list-style: none;
+    display: flex;
+}
+
+.navBar__menu a{
+    text-decoration: none;
+    color: var(--dark-grey);
+    margin-right: 1rem;
+    font-size: 1.2rem;
+    font-weight: 500;
+}
+
+.navBar__iconsContainer{
+    display: flex;
+    align-items: center;
 }
 
 .navBar__search{
@@ -27,32 +35,37 @@
     display: flex;
     align-items: center;
     width: 90%;
-    max-width: 400px;
+    max-width: 300px;
     height: 70%;
 }
 .navBar__searchInput{
-    background-color: var(--white-transparent);
+    background-color: #e2e2e2;
     border-radius: 20px;
     height: 100%;
+    min-height: 30px;
     width: 100%;
     border: none;
     outline: none;
     display: flex;
     align-items: center;
     font-size: 1.2rem;
-    color: var(--white);
+    color: #808080;
     padding-left: 40px;
     padding-right: 10px;
 }
 
 .navBar__searchIcon, .navBar__cartIcon{
-    color: var(--white);
+    color: var(--dark-grey);
     font-size: 1.2rem;
     cursor: pointer;
+}
+.navBar__cartIcon{
+    margin-left: 1rem;
 }
 .navBar__searchIcon{
     position: absolute;
     left: 10px;
+    color: #808080;
 }
 
 .navBar__cartContainer{
@@ -65,10 +78,10 @@
     top: -10px;
     right: -10px;
     min-width: 18px;
-    background-color: #12121280;
-    color: var(--white);
-    font-size: .7rem;
-    font-weight: 00;
+    background-color: var(--secondary-color);
+    color: var(--dark-grey);
+    font-size: .75rem;
+    font-weight: 700;
     line-height: 100%;
     border-radius: 50%;
     padding: .2rem;
