--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,21 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;1,700&display=swap');
 *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
+:root{
+  --dark-grey: #3B3B3B;
+  --secondary-color: #EDBE5F;
+  --white: #fff;
+  --light-gray: #f2f2f2;
+  --white-transparent: #fff5;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Montserrat', sans-serif;
+  background-color: #f2f2f2;
 }
 
 code {
