--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 }
 :root{
   --dark-grey: #3B3B3B;
-  --secondary-color: #EDBE5F;
+  --primary-color: #7c95b4;
   --white: #fff;
   --light-gray: #f2f2f2;
   --white-transparent: #fff5;
