--- a/src/scss/ItemCount.scss
+++ b/src/scss/ItemCount.scss
@@ -1,12 +1,12 @@
 .itemCount{
     &Container{
         background-color: #fff;
-        display: inline-flex;
+        display: flex;
         flex-direction: column;
-        min-width: 200px;
+        max-width: 200px;
         padding: 1rem;
         border-radius: 10px;
-        margin-top: 2rem;
+        margin: 2rem auto;
         color: var(--dark-grey);
         box-shadow: 0px 0px 17px -10px #0005;
     }
