--- a/src/scss/ItemList.scss
+++ b/src/scss/ItemList.scss
@@ -1,14 +1,6 @@
 .itemList{
-    margin-top: 2rem;
-    color: var(--dark-grey);
-    &__container{
-        list-style: initial;
-        display: inline-flex;
-        flex-direction: column;
-        text-align: start;
-    }
-    &__title{
-        font-size: 1.5rem;
-        margin-bottom: 1rem;
-    }    
+    display: flex;
+    flex-wrap: wrap;
+    justify-items: center;
+    padding: 0 6%;
 }
