--- a/src/scss/NavBar.scss
+++ b/src/scss/NavBar.scss
@@ -1,14 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;1,700&display=swap');
 
 .navBar{
-    position: relative;
+    position: fixed;
+    z-index: 1000;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: var(--light-gray);
+    background: #f7f7f7cc;
+    backdrop-filter: blur(20px);
     width: 100%;
-    padding: 0 15rem;
+    padding: 0 7%;
     height: 50px;
+    margin-top: -50px;
     font-family: 'Montserrat', sans-serif;
     &__menu{
         list-style: none;
