detalle de producto

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,8 @@
 :root{
   --primary-color: #7c95b4;
   --primary-dark: #435469;
-  --dark-grey: #3B3B3B;
+  --gray: #767676;
+  --dark-gray: #3B3B3B;
   --light-gray: #A5A5A5;
   --white: #fff;
   --bg: #f7f7f7;
