--- a/src/scss/ItemCount.scss
+++ b/src/scss/ItemCount.scss
@@ -7,7 +7,7 @@
         padding: 1rem;
         border-radius: 10px;
         margin: 2rem auto;
-        color: var(--dark-grey);
+        color: var(--dark-gray);
         box-shadow: 0px 0px 17px -10px #0005;
     }
     &__product{
@@ -40,6 +40,7 @@
     &__purchase{
         background-color: var(--primary-color);
         color: var(--white);
+        font-size: .8rem;
         padding: .5rem;
         margin-top: .5rem;
         border-radius: 3px;
