--- a/src/scss/NavBar.scss
+++ b/src/scss/NavBar.scss
@@ -18,7 +18,7 @@
         display: flex;
         a{
             text-decoration: none;
-            color: var(--dark-grey);
+            color: var(--dark-gray);
             margin-right: 1rem;
             font-size: 1.2rem;
             font-weight: 500;
@@ -52,7 +52,7 @@
         padding-right: 10px;
     }
     &__searchIcon, &__cartIcon{
-        color: var(--dark-grey);
+        color: var(--dark-gray);
         font-size: 1.2rem;
         cursor: pointer;
     }
