--- a/src/scss/Item.scss
+++ b/src/scss/Item.scss
@@ -8,6 +8,7 @@
     margin: 1%;
     width: 48%;
     position: relative;
+    text-decoration: none;
     &__imgContainer{
         width: 100%;
         padding: 1rem;
