--- a/src/scss/ItemDetail.scss
+++ b/src/scss/ItemDetail.scss
@@ -1,12 +1,14 @@
 .itemDetail{
-    display: inline-flex;
+    display: flex;
     align-items: flex-start;
+    margin: auto;
     margin-top: 3rem;
+    padding-top: 2rem;
     max-width: 900px;
     &__img{
         max-width: 220px;
         border-radius: 10px;
-        box-shadow: 0px 0px 61px -9px rgb(0 0 0 / 30%);
+        box-shadow: 1px 20px 30px -9px rgb(0 0 0 / 15%);
     }
     &__textContainer{
         text-align: start;
