--- a/src/scss/NavBar.scss
+++ b/src/scss/NavBar.scss
@@ -23,6 +23,14 @@
             font-size: 1.2rem;
             font-weight: 500;
         }
+        &--categories{
+            position: absolute;
+            left: 50%;
+            transform: translateX(-50%);
+            a{
+                font-weight: 400;
+            }
+        }
     }
     &__iconsContainer{
         display: flex;
