--- a/src/scss/ItemCount.scss
+++ b/src/scss/ItemCount.scss
@@ -1,18 +1,11 @@
 .itemCount{
     &Container{
-        background-color: #fff;
         display: flex;
         flex-direction: column;
         max-width: 200px;
-        padding: 1rem;
         border-radius: 10px;
-        margin: 2rem auto;
+        margin: 2rem 0;
         color: var(--dark-gray);
-        box-shadow: 0px 0px 17px -10px #0005;
-    }
-    &__product{
-        font-size: 1.2rem;
-        margin-bottom: .5rem;
     }
     &__stock{
         margin-bottom: 1rem;
@@ -42,6 +35,7 @@
         color: var(--white);
         font-size: .8rem;
         padding: .5rem;
+        text-align: center;
         margin-top: .5rem;
         border-radius: 3px;
         cursor: pointer;
